correct links in head, separate social images

--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/src/assets/favicon-32x32.png">
+  <link rel="icon" href="/favicon-32x32.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#ffb612 ">
   <meta name="theme-color" content="#ffb612 ">
   <title>Termennetwerk</title>
   <meta name="description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
   <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Termennetwerk">
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/src/assets/9200579_v8fd8rv7.jpg">
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/9200579_v8fd8rv7_social_1.jpg">
+  <meta prefix="og: http://ogp.me/ns#" property="og:mage:width" content="1200">
+  <meta prefix="og: http://ogp.me/ns#" property="og:image:height" content="630">
+  <meta prefix="og: http://ogp.me/ns#" property="og:image:type" content="image/jpeg">
   <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Termennetwerk">
   <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://termennetwerk.netwerkdigitaalerfgoed.nl/">
   <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
-  <meta property="twitter:card" content="summary">
-  <meta property="twitter:image:src" content="/src/assets/9200579_v8fd8rv7.jpg">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image:src" content="/9200579_v8fd8rv7_social_2.jpg">
   <meta property="twitter:title" content="Termennetwerk">
   <meta property="twitter:description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
   <meta name="author" content="Netwerk Digitaal Erfgoed">
