restored navbar-toggler, changed social image

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
   <title>Termennetwerk</title>
   <meta name="description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
   <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Termennetwerk">
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/9200579_v8fd8rv7_social_1.jpg">
-  <meta prefix="og: http://ogp.me/ns#" property="og:mage:width" content="1200">
-  <meta prefix="og: http://ogp.me/ns#" property="og:image:height" content="630">
-  <meta prefix="og: http://ogp.me/ns#" property="og:image:type" content="image/jpeg">
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/nde-termennetwerk-socials.jpg">
   <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Termennetwerk">
   <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://termennetwerk.netwerkdigitaalerfgoed.nl/">
   <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:image:src" content="/9200579_v8fd8rv7_social_2.jpg">
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:image:src" content="/nde-termennetwerk-socials.jpg">
   <meta property="twitter:title" content="Termennetwerk">
   <meta property="twitter:description" content="Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten.">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="author" content="Netwerk Digitaal Erfgoed">
 </head>
 <body>
